src/static/css/styles.css
/* ... */
/* Basic */

@-ms-viewport {
  width: device-width;
}

body {
  -ms-overflow-style: scrollbar;
}

@media screen and (max-width: 480px) {
  html,
  body {
    min-width: 320px;
  }
}

body {
  background: #fff;
}

body.is-loading *,
body.is-loading *:before,
body.is-loading *:after {
  -moz-animation: none !important;
  -webkit-animation: none !important;
  -ms-animation: none !important;
  animation: none !important;
  -moz-transition: none !important;
  -webkit-transition: none !important;
  -ms-transition: none !important;
  transition: none !important;
}

/* Type */

body,
input,
select,
textarea {
  color: #9a9a9a;
  font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
  font-size: 14pt;
  font-weight: 400;
  line-height: 1.65;
}

@media screen and (max-width: 1680px) {
  body,
  input,
  select,
  textarea {
    font-size: 12pt;
  }
}

@media screen and (max-width: 1280px) {
  body,
  input,
  select,
  textarea {
    font-size: 12pt;
  }
}

@media screen and (max-width: 980px) {
  body,
  input,
  select,
  textarea {
    font-size: 12pt;
  }
}

@media screen and (max-width: 736px) {
  body,
  input,
  select,
  textarea {
    font-size: 12pt;
  }
}

@media screen and (max-width: 480px) {
  body,
  input,
  select,
  textarea {
    font-size: 12pt;
  }
}

a {
  color: #6cc091;
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

strong,
b {
  color: #555;
  font-weight: 600;
}

em,
i {
  font-style: italic;
}

p {
  margin: 0 0 2em 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #555;
  font-weight: 400;
  line-height: 1.5;
  margin: 0 0 1em 0;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  color: inherit;
  text-decoration: none;
}

h2 {
  font-size: 1.85em;
  font-weight: 300;
}

h3 {
  font-size: 1.75em;
}

@media screen and (max-width: 480px) {
  h3 {
    font-size: 1.25em;
  }
}

h4 {
  font-size: 1.5em;
}

h5 {
  font-size: 0.9em;
}

h6 {
  font-size: 0.7em;
}

sub {
  font-size: 0.8em;
  position: relative;
  top: 0.5em;
}

sup {
  font-size: 0.8em;
  position: relative;
  top: -0.5em;
}

blockquote {
  border-left: solid 4px #dbdbdb;
  font-style: italic;
  margin: 0 0 2em 0;
  padding: 0.5em 0 0.5em 2em;
}

code {
  background: rgba(144, 144, 144, 0.075);
  border-radius: 0;
  border: solid 1px #dbdbdb;
  font-family: "Courier New", monospace;
  font-size: 0.9em;
  margin: 0 0.25em;
  padding: 0.25em 0.65em;
}

pre {
  -webkit-overflow-scrolling: touch;
  font-family: "Courier New", monospace;
  font-size: 0.9em;
  margin: 0 0 2em 0;
}

pre code {
  display: block;
  line-height: 1.75;
  padding: 1em 1.5em;
  overflow-x: auto;
}

hr {
  border: 0;
  border-bottom: solid 1px #dbdbdb;
  margin: 2em 0;
}

hr.major {
  margin: 3em 0;
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

.align-right {
  text-align: right;
}

.inner {
  max-width: 75em;
  margin: 0 auto;
}

@media screen and (max-width: 1280px) {
  .inner {
    max-width: 90%;
  }
}

@media screen and (max-width: 480px) {
  .inner {
    max-width: 90%;
  }
}

/* Section/Article */

section.special,
article.special {
  text-align: center;
}

section.special article,
article.special article {
  text-align: left;
}

section.wrapper,
article.wrapper {
  padding: 6em 0;
}

section.wrapper header,
article.wrapper header {
  margin-bottom: 4em;
}

section.wrapper header h2,
article.wrapper header h2 {
  font-size: 2.75em;
  margin: 0 0 0.5em 0;
}

section.wrapper header p,
article.wrapper header p {
  font-size: 1em;
}

section.wrapper article header,
article.wrapper article header {
  margin: 0;
}

@media screen and (max-width: 980px) {
  section.wrapper,
  article.wrapper {
    padding: 4em 0;
  }
}

@media screen and (max-width: 736px) {
  section.wrapper,
  article.wrapper {
    padding: 3em 0;
  }

  section.wrapper header,
  article.wrapper header {
    margin-bottom: 2em;
  }

  section.wrapper header h2,
  article.wrapper header h2 {
    font-size: 2em;
  }

  section.wrapper header p,
  article.wrapper header p {
    font-size: 0.9em;
  }
}

@media screen and (max-width: 480px) {
  section.wrapper article,
  article.wrapper article {
    text-align: center;
  }
}

header p {
  color: #bbb;
  position: relative;
  margin: 0 0 1.5em 0;
}

header h2 + p {
  font-size: 1.25em;
  margin-top: -1em;
}

header h3 + p {
  font-size: 1.1em;
  margin-top: -0.8em;
}

header h4 + p,
header h5 + p,
header h6 + p {
  font-size: 0.9em;
  margin-top: -0.6em;
}

/* Flex */

.flex {
  display: -ms-flexbox;
  -ms-flex-wrap: wrap;
  -ms-flex-pack: justify;
  -moz-justify-content: space-between;
  -webkit-justify-content: space-between;
  -ms-justify-content: space-between;
  justify-content: space-between;
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  -moz-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.flex.flex-2 {
  -moz-justify-content: space-between;
  -webkit-justify-content: space-between;
  -ms-justify-content: space-between;
  justify-content: space-between;
}

.flex.flex-2 article {
  width: 50%;
}

@media screen and (max-width: 980px) {
  .flex.flex-2 article {
    width: 100%;
    margin-bottom: 3em;
  }

  .flex.flex-2 article:last-child {
    margin-bottom: 0;
  }
}

@media screen and (max-width: 480px) {
  .flex.flex-2 br {
    display: none;
  }
}

/* Form */

form {
  margin: 0 0 2em 0;
}

form .field {
  margin-bottom: 1.5em;
}

form .field.half {
  display: inline-block;
  width: 48%;
}

form .field.half.first {
  margin-right: 3%;
}

@media screen and (max-width: 980px) {
  form .field.half {
    display: block;
    width: 100%;
  }

  form .field.half.first {
    margin-right: 0;
  }
}

label {
  color: #555;
  display: block;
  font-size: 0.9em;
  font-weight: 600;
  margin: 0 0 1em 0;
}
/* ... */

